--- a/src/app/routes/calendar/calendar.component.css
+++ b/src/app/routes/calendar/calendar.component.css
@@ -1,7 +1,10 @@
 .calendar {
-  margin-top : 5%;
-  width      : 70%;
-  height     : 70%;
+  margin-top: 5%;
+  width: 70%;
+  height: 70%;
   margin-left: 15%;
-  position   : fixed;
+  position: fixed;
+}
+h3 {
+  color: #222831;
 }
