--- a/src/app/routes/class-registration/class-registration.component.html
+++ b/src/app/routes/class-registration/class-registration.component.html
@@ -1,47 +1,68 @@
 <mat-horizontal-stepper #stepper class="class-registration-container">
+  <!-- Step 1: Class Selection -->
+  <mat-step [completed]="selectedClass">
+    <ng-template matStepLabel><mat-icon>class</mat-icon> Select a class</ng-template>
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="firstFormGroup">
+          <mat-grid-list cols="1" rowHeight="120px">
+            <mat-grid-tile>
+              <mat-form-field appearance="fill">
+                <mat-label>Class</mat-label>
+                <mat-select formControlName="firstCtrl" (selectionChange)="setAvailableLectures($event.value)">
+                  <mat-option *ngFor="let class of availableClasses" [value]="class.value">
+                    {{ class.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </mat-grid-tile>
+          </mat-grid-list>
+          <button mat-raised-button color="primary" matStepperNext class="full-width-button">
+            Next <mat-icon>arrow_forward</mat-icon>
+          </button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </mat-step>
   
-    <!-- Selection of class -->
-    <mat-step [completed]="selectedClass">
-      <ng-template matStepLabel>Select a class</ng-template>
-      <form [formGroup]="firstFormGroup">
-        <mat-form-field appearance="fill">
-          <mat-label>Class</mat-label>
-          <mat-select formControlName="firstCtrl" (selectionChange)="setAvailableLectures($event.value)">
-            <mat-option *ngFor="let class of availableClasses" [value]="class.value">
-              {{ class.viewValue }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <button mat-button matStepperNext>Next</button>
-      </form>
-    </mat-step>
-    
-    <!-- Selection of lecture time -->
-    <mat-step [completed]="selectedLecture">
-      <ng-template matStepLabel>Select a lecture time</ng-template>
-      <form [formGroup]="secondFormGroup">
-        <mat-form-field appearance="fill">
-          <mat-label>Lecture time</mat-label>
-          <mat-select formControlName="secondCtrl" (selectionChange)="selectedLecture = $event.value">
-            <mat-option *ngFor="let lecture of availableLectures" [value]="lecture.value">
-              {{ lecture.viewValue }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-        <button mat-button matStepperNext>Next</button>
-      </form>
-    </mat-step>
-    
-    <!-- Overview and submission -->
-    <mat-step>
-      <ng-template matStepLabel>Overview and Confirm</ng-template>
-      <div class="overview-content">
+  <!-- Step 2: Lecture Time Selection -->
+  <mat-step [completed]="selectedLecture">
+    <ng-template matStepLabel><mat-icon>access_time</mat-icon> Select a lecture time</ng-template>
+    <mat-card>
+      <mat-card-content>
+        <form [formGroup]="secondFormGroup">
+          <mat-grid-list cols="1" rowHeight="120px">
+            <mat-grid-tile>
+              <mat-form-field appearance="fill">
+                <mat-label>Lecture time</mat-label>
+                <mat-select formControlName="secondCtrl" (selectionChange)="selectedLecture = $event.value">
+                  <mat-option *ngFor="let lecture of availableLectures" [value]="lecture.value">
+                    {{ lecture.viewValue }}
+                  </mat-option>
+                </mat-select>
+              </mat-form-field>
+            </mat-grid-tile>
+          </mat-grid-list>
+          <button mat-raised-button color="primary" matStepperNext class="full-width-button">
+            Next <mat-icon>arrow_forward</mat-icon>
+          </button>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </mat-step>
+
+  <!-- Step 3: Overview and Submission -->
+  <mat-step>
+    <ng-template matStepLabel><mat-icon>check_circle_outline</mat-icon> Overview and Confirm</ng-template>
+    <mat-card>
+      <mat-card-content class="overview-content">
         <h3>Your Selection:</h3>
         <p><strong>Class:</strong> {{ getSelectedClassViewValue() }}</p>
         <p><strong>Lecture Time:</strong> {{ getSelectedLectureViewValue() }}</p>
-        <button mat-button class="submit-button" (click)="submit()">Confirm and Submit</button>
-      </div>
-    </mat-step>
-  
-  </mat-horizontal-stepper>
-  
+        <button mat-raised-button color="accent" (click)="submit()" class="full-width-button">
+          Confirm and Submit <mat-icon>check</mat-icon>
+        </button>
+      </mat-card-content>
+    </mat-card>
+  </mat-step>
+</mat-horizontal-stepper>
