--- a/src/app/routes/class-registration/class-registration.component.less
+++ b/src/app/routes/class-registration/class-registration.component.less
@@ -1,34 +1,39 @@
 .class-registration-container {
-    padding-top: 10%;
-    width      : 33%;
-    margin     : 0 auto;
-}
-
-mat-form-field {
-    width: 100%;
+    margin-top: 10%!important;
+    width: 40%;
+    margin: auto;
 }
 
 mat-card {
-    max-width: 600px;
-    margin   : 20px auto;
-}
-
-button {
-    margin-top: 20px;
-}
-
-mat-horizontal-stepper {
-    width: 100%;
-}
-
-.overview-content {
-    margin-top: 20px;
-}
-
-.overview-content h3 {
     margin-bottom: 15px;
-}
-
-.submit-button {
-    color: #EEEEEE;
-}
+  }
+  
+  .full-width-button {
+    width: 100%;
+    margin-top: 15px;
+  }
+  
+  mat-grid-list {
+    width: 100%;
+    margin-bottom: 15px;
+  }
+  
+  mat-horizontal-stepper {
+    margin: 20px 0;
+  }
+  
+  mat-icon {
+    vertical-align: middle;
+    margin-right: 8px;
+  }
+  
+  .overview-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .overview-content h3 {
+    margin-bottom: 20px;
+  }
