--- a/src/app/routes/class-registration/class-registration.component.css
+++ b/src/app/routes/class-registration/class-registration.component.css
@@ -1,14 +1,15 @@
 .class-registration-container {
-  margin-top: 10%!important;
+  padding-top: 10%;
   width: 40%;
-  margin: auto;
+  margin: 0 auto;
 }
 mat-card {
   margin-bottom: 15px;
 }
-.full-width-button {
-  width: 100%;
+.next-button {
+  width: 34%;
   margin-top: 15px;
+  margin-left: 33%;
 }
 mat-grid-list {
   width: 100%;
@@ -29,4 +30,14 @@ mat-icon {
 }
 .overview-content h3 {
   margin-bottom: 20px;
+}
+* {
+  -webkit-user-select: none;
+  /* Chrome, Safari, Opera */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently supported by Chrome, Edge, Opera, and Firefox */
 }
