--- a/src/app/routes/class-registration/class-registration.component.less
+++ b/src/app/routes/class-registration/class-registration.component.less
@@ -1,39 +1,52 @@
 .class-registration-container {
-    margin-top: 10%!important;
+    padding-top: 10%;
     width: 40%;
-    margin: auto;
+    margin: 0 auto;
 }
 
 mat-card {
     margin-bottom: 15px;
-  }
-  
-  .full-width-button {
-    width: 100%;
+}
+
+.next-button {
+    width: 34%;
     margin-top: 15px;
-  }
-  
-  mat-grid-list {
+    margin-left: 33%;
+}
+
+mat-grid-list {
     width: 100%;
     margin-bottom: 15px;
-  }
-  
-  mat-horizontal-stepper {
+}
+
+mat-horizontal-stepper {
     margin: 20px 0;
-  }
-  
-  mat-icon {
+}
+
+mat-icon {
     vertical-align: middle;
     margin-right: 8px;
-  }
-  
-  .overview-content {
+}
+
+.overview-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-  }
-  
-  .overview-content h3 {
+}
+
+.overview-content h3 {
     margin-bottom: 20px;
-  }
+}
+
+// Disable text selection for a better experience
+* {
+    -webkit-user-select: none;
+    /* Chrome, Safari, Opera */
+    -moz-user-select: none;
+    /* Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently supported by Chrome, Edge, Opera, and Firefox */
+}
