Mongo Db connection

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,15 +1,16 @@
-mat-toolbar {
+.navbar-container {
   width: 100%;
   position: fixed;
   top: 0;
   right: 0;
   z-index: 10;
   background-color: #222831;
+  height: 5vh;
 }
-mat-toolbar .mat-toolbar-row {
+.navbar-container .mat-toolbar-row {
   justify-content: space-between;
 }
-mat-toolbar .mat-toolbar-row .sidebar-button {
+.navbar-container .mat-toolbar-row .sidebar-button {
   background: none;
   border: none;
   cursor: pointer;
@@ -19,16 +20,16 @@ mat-toolbar .mat-toolbar-row .sidebar-button {
   align-items: center;
   justify-content: center;
 }
-mat-toolbar .mat-toolbar-row .sidebar-button:hover .hamburger-icon > .hamburger-line {
+.navbar-container .mat-toolbar-row .sidebar-button:hover .hamburger-icon > .hamburger-line {
   background: rgba(255, 255, 255, 0.1);
 }
-mat-toolbar .mat-toolbar-row .sidebar-button .hamburger-icon {
+.navbar-container .mat-toolbar-row .sidebar-button .hamburger-icon {
   display: block;
   position: relative;
   width: 30px;
   height: 20px;
 }
-mat-toolbar .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line {
+.navbar-container .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line {
   background: #fff;
   height: 3px;
   /* Adjust to change the thickness of the lines */
@@ -38,31 +39,31 @@ mat-toolbar .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line {
   border-radius: 3px;
   transition: 0.4s;
 }
-mat-toolbar .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line:nth-child(1) {
+.navbar-container .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line:nth-child(1) {
   top: 0;
 }
-mat-toolbar .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line:nth-child(2) {
+.navbar-container .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line:nth-child(2) {
   top: 8px;
 }
-mat-toolbar .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line:nth-child(3) {
+.navbar-container .mat-toolbar-row .sidebar-button .hamburger-icon .hamburger-line:nth-child(3) {
   top: 16px;
 }
-mat-toolbar .mat-toolbar-row .spacer {
+.navbar-container .mat-toolbar-row .spacer {
   flex: 1 1 auto;
 }
-mat-toolbar .mat-toolbar-row .nav-settings-btn {
+.navbar-container .mat-toolbar-row .nav-settings-btn {
   color: white;
 }
-mat-toolbar .mat-toolbar-row .nav-settings-btn:hover {
+.navbar-container .mat-toolbar-row .nav-settings-btn:hover {
   cursor: pointer;
   color: rgba(255, 255, 255, 0.1);
   transition: 0.4s;
 }
-mat-toolbar .mat-toolbar-row .app_title {
+.navbar-container .mat-toolbar-row .app_title {
   font-size: 1.3vw;
   text-decoration: none;
   color: white;
 }
-mat-toolbar .mat-toolbar-row .app_title:hover {
+.navbar-container .mat-toolbar-row .app_title:hover {
   cursor: pointer;
 }
