--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -1,10 +1,11 @@
-mat-toolbar {
+.navbar-container {
   width           : 100%;
   position        : fixed;
   top             : 0;
   right           : 0;
   z-index         : 10;
   background-color: rgb(34, 40, 49);
+  height: 5vh;
 
   .mat-toolbar-row {
     justify-content: space-between;
