--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" *ngIf="!isLoginRoute">
+<mat-toolbar color="primary" *ngIf="!isLoginRoute" class="navbar-container">
   <mat-toolbar-row>
     
     <!-- Sidebar toggle button -->
