--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,12 +13,12 @@
     <!-- App Title -->
     <a [href]="'/'" class="app_title">{{ "app_title" | translate }}</a>
 
-    <span class="spacer"></span>
+    <!-- <span class="spacer"></span> -->
 
     <!-- Settings -->
-    <a class="nav-settings-btn" [href]="'/settings'">
+    <!-- <a class="nav-settings-btn" [href]="'/settings'">
       <mat-icon>settings</mat-icon>
-    </a>
+    </a> -->
 
   </mat-toolbar-row>
 </mat-toolbar>
