--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -54,9 +54,9 @@ mat-toolbar {
       }
     }
 
-    .spacer {
-      flex: 1 1 auto;
-    }
+    // .spacer {
+    //   flex: 1 1 auto;
+    // }
 
     .nav-settings-btn {
       color: white;
@@ -72,6 +72,7 @@ mat-toolbar {
       font-size      : 1.3vw;
       text-decoration: none;
       color          : white;
+      padding-left   : 0%;
 
       &:hover {
         cursor: pointer;
