--- a/src/app/components/sidebar/sidebar.component.less
+++ b/src/app/components/sidebar/sidebar.component.less
@@ -1,13 +1,33 @@
 .sidebar {
   position        : fixed;
-  top             : 64px;
+  top             : 7vh;
   left            : -250px;
   width           : 250px;
   transition      : left 0.3s;
   background-color: #222831;
   color           : #EEEEEE;
   z-index         : 1000;
-  height          : 100vh;
+  height          : 95vh;
+}
+
+.item-style {
+  position     : absolute;
+  display      : inline;
+  width        : 200px;
+  white-space  : nowrap;
+  overflow     : hidden !important;
+  text-overflow: ellipsis;
+  font-size    : 1rem;
+  left         : 25%;
+  padding-top  : 3px;
+  align-items  : center;
+}
+
+i {
+  font-size   : 1.5rem;
+  align-items : center;
+  padding-left: 10%;
+  color       : #EEEEEE;
 }
 
 .sidebar.open {
@@ -28,19 +48,13 @@
   .sidebar-items {
     padding-left: 20%;
   }
-
-  .sidebar-items:first-child {
-    margin-top: 85%;
-    ;
-  }
-
-  i {
-    color: #EEEEEE;
-  }
 }
 
 .sidebar-items {
-  padding-top: 10px;
+  padding-top    : 10px;
+  display        : flex;
+  justify-content: start;
+  height         : 70px;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
@@ -50,13 +64,13 @@
 }
 
 .sidebar-bottom-items {
-  position      : absolute;
-  width         : 100%;
-  padding-bottom: 15px;
-  color         : #EEEEEE;
-  bottom        : 8%;
-  align-items   : center;
-  padding-top   : 10px;
+  position         : absolute;
+  width            : 100%;
+  // padding-bottom: 15px;
+  color            : #EEEEEE;
+  bottom           : 2.5%;
+  align-items      : center;
+  padding-top      : 10px;
 
   &:hover {
     background-color: rgba(0, 0, 0, 0.1);
@@ -65,23 +79,6 @@
   }
 }
 
-.item-style {
-  position     : absolute;
-  display      : inline;
-  width        : 200px;
-  white-space  : nowrap;
-  overflow     : hidden !important;
-  text-overflow: ellipsis;
-  font-size    : 1rem;
-  left         : 25%;
-  padding-top  : 3px;
-}
-
-i {
-  font-size   : 1.5rem;
-  align-items : center;
-  padding-left: 10%;
-}
 
 .sidebar-overlay {
   width   : 100vw;
