--- a/src/app/routes/class-registration/class-registration.component.html
+++ b/src/app/routes/class-registration/class-registration.component.html
@@ -1,7 +1,9 @@
 <mat-horizontal-stepper #stepper class="class-registration-container">
   <!-- Step 1: Class Selection -->
   <mat-step [completed]="selectedClass">
-    <ng-template matStepLabel class="step-label"><mat-icon>class</mat-icon> Select a class</ng-template>
+    <ng-template matStepLabel class="step-label"
+      ><mat-icon>class</mat-icon> Select a class</ng-template
+    >
     <mat-card>
       <mat-card-content>
         <form [formGroup]="firstFormGroup">
@@ -9,25 +11,38 @@
             <mat-grid-tile>
               <mat-form-field appearance="fill">
                 <mat-label>Class</mat-label>
-                <mat-select formControlName="firstCtrl" (selectionChange)="setAvailableLectures($event.value)">
-                  <mat-option *ngFor="let class of availableClasses" [value]="class.value">
+                <mat-select
+                  formControlName="firstCtrl"
+                  (selectionChange)="setAvailableLectures($event.value)"
+                >
+                  <mat-option
+                    *ngFor="let class of availableClasses"
+                    [value]="class.value"
+                  >
                     {{ class.viewValue }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
             </mat-grid-tile>
           </mat-grid-list>
-          <button mat-raised-button color="primary" matStepperNext class="next-button">
+          <button
+            mat-raised-button
+            color="primary"
+            matStepperNext
+            class="next-button"
+          >
             Next <mat-icon>arrow_forward</mat-icon>
           </button>
         </form>
       </mat-card-content>
     </mat-card>
   </mat-step>
-  
+
   <!-- Step 2: Lecture Time Selection -->
   <mat-step [completed]="selectedLecture">
-    <ng-template matStepLabel class="step-label"><mat-icon>access_time</mat-icon> Select a lecture time</ng-template>
+    <ng-template matStepLabel class="step-label"
+      ><mat-icon>access_time</mat-icon> Select a lecture time</ng-template
+    >
     <mat-card>
       <mat-card-content>
         <form [formGroup]="secondFormGroup">
@@ -35,15 +50,26 @@
             <mat-grid-tile>
               <mat-form-field appearance="fill">
                 <mat-label>Lecture time</mat-label>
-                <mat-select formControlName="secondCtrl" (selectionChange)="selectedLecture = $event.value">
-                  <mat-option *ngFor="let lecture of availableLectures" [value]="lecture.value">
+                <mat-select
+                  formControlName="secondCtrl"
+                  (selectionChange)="selectedLecture = $event.value"
+                >
+                  <mat-option
+                    *ngFor="let lecture of availableLectures"
+                    [value]="lecture.value"
+                  >
                     {{ lecture.viewValue }}
                   </mat-option>
                 </mat-select>
               </mat-form-field>
             </mat-grid-tile>
           </mat-grid-list>
-          <button mat-raised-button color="primary" matStepperNext class="next-button">
+          <button
+            mat-raised-button
+            color="primary"
+            matStepperNext
+            class="next-button"
+          >
             Next <mat-icon>arrow_forward</mat-icon>
           </button>
         </form>
@@ -53,13 +79,21 @@
 
   <!-- Step 3: Overview and Submission -->
   <mat-step>
-    <ng-template matStepLabel class="step-label"><mat-icon>check_circle_outline</mat-icon> Overview and Confirm</ng-template>
+    <ng-template matStepLabel class="step-label"
+      ><mat-icon>check_circle_outline</mat-icon> Overview and
+      Confirm</ng-template
+    >
     <mat-card>
       <mat-card-content class="overview-content">
         <h3>Your Selection:</h3>
         <p><strong>Class:</strong> {{ getSelectedClassViewValue() }}</p>
         <p><strong>Lecture Time:</strong> {{ getSelectedLectureViewValue() }}</p>
-        <button mat-raised-button color="accent" (click)="submit()" class="confirm-button">
+        <button
+          mat-raised-button
+          color="accent"
+          (click)="submit()"
+          class="confirm-button"
+        >
           Confirm and Submit <mat-icon>check</mat-icon>
         </button>
       </mat-card-content>
