--- a/src/app/routes/settings/settings.component.html
+++ b/src/app/routes/settings/settings.component.html
@@ -5,7 +5,7 @@
                 {{ "gen_settings" | translate }}
             </h1>
             <h2 class="settings-second-title">
-                Change your current settings
+                {{ "change_settings" | translate }}
             </h2>
         </div>
     </div>
@@ -16,7 +16,7 @@
                 <i class="card-icon fa fa-language"></i>
                 <div class="card-body">
                     <h5 class="card-title">{{ "change_lang" | translate }}</h5>
-                    <p class="card-text">Modify the language settings</p>
+                    <p class="card-text">{{ "modify_language" | translate }}</p>
                     <button class="card-button" (click)="changeLanguageDialog()">{{ "gen_select" | translate }}</button>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                 <i class="card-icon fa fa-paint-brush"></i>
                 <div class="card-body">
                     <h5 class="card-title">{{ "change_theme" | translate }}</h5>
-                    <p class="card-text">Select the visual theme</p>
+                    <p class="card-text">{{ "select_theme" | translate }}</p>
                     <button class="card-button">{{ "gen_select" | translate }}</button>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                 <i class="card-icon fa fa-lock"></i>
                 <div class="card-body">
                     <h5 class="card-title">{{ "change_password" | translate }}</h5>
-                    <p class="card-text">Update your account password</p>
+                    <p class="card-text">{{ "update_password" | translate }}</p>
                     <button class="card-button">{{ "gen_select" | translate }}</button>
                 </div>
             </div>
