Add - Optional navbarSimple

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -20,15 +20,13 @@
 
 </div>
 
-<!-- <div class="sidebar-simple" >
+<div class="sidebar-simple" *ngIf="features.sidebar.hasSidebarSimple">
 
   <div class="sidebar-items" *ngFor="let item of items">
     <i [ngClass]="item.icon"></i>
   </div>
-    
 
-</div> -->
-
+</div>
 
 <!-- Sidebar Overlay -->
 <div *ngIf="isOpen" class="sidebar-overlay" (click)="toggleSidebar()"></div>
