--- a/src/app/routes/user/login/login.component.less
+++ b/src/app/routes/user/login/login.component.less
@@ -6,6 +6,10 @@ body {
     padding: 0;
 }
 
+mat-spinner {
+    margin: auto;
+}
+
 /* Styling for the container */
 .login-container {
     display: flex;
