General fixes, Removed angular calendar for now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,5 @@
   </div>
 
   <!-- Footer -->
-  <!-- <app-footer></app-footer> -->
+  <app-footer *ngIf="features.footer.hasFooter"></app-footer>
 </div>
