--- a/src/app/routes/terms/terms.component.html
+++ b/src/app/routes/terms/terms.component.html
@@ -1,1 +1,42 @@
-<p>terms works!</p>
+<p>Terms and Conditions for Thesis-Scheduler<br>
+<br>
+    1. Introduction<br>
+    <br>
+    Welcome to Thesis-Scheduler! These Terms and Conditions govern your use of our application and services. By accessing or using the app, you agree to be bound by these terms.<br>
+    <br>
+    2. User Accounts<br>
+    <br>
+    When you create an account with Thesis-Scheduler, you agree to provide accurate and complete information. You are responsible for maintaining the confidentiality of your account and password.<br>
+    <br>
+    3. User Requirements<br>
+    <br>
+    Thesis-Scheduler is available to users who are 6 years of age and older. Users under the age of 18 should have parental or guardian consent to use the app.<br>
+    <br>
+    4. Privacy<br>
+    <br>
+    Thesis-Scheduler respects your privacy. We do not collect personal information except for the details you provide during registration. Your password is securely hashed in our database. We use local storage, sessions, and cookies to enhance your user experience.<br>
+    <br>
+    5. Google Login<br>
+    <br>
+    We provide the option to sign in with Google. By choosing this method, you agree to share the necessary information for registration and login from your Google account.<br>
+    <br>
+    6. Prohibited Activities<br>
+    <br>
+    You are prohibited from using the app for any unlawful or prohibited purpose. You must not use the app in any way that could damage, disable, or impair the service.<br>
+    <br>
+    7. Intellectual Property Rights<br>
+    <br>
+    The content and functionality of the app are the property of Thesis-Scheduler and are protected by copyright and other intellectual property laws.<br>
+    <br>
+    8. Changes to Terms<br>
+    <br>
+    Thesis-Scheduler reserves the right to modify these terms at any time. Your continued use of the app signifies your acceptance of any changes.<br>
+    <br>
+    9. Contact Information<br>
+    <br>
+    If you have any questions or concerns about these Terms, please contact us at anestistzoyr[at]gmail.com.<br>
+    <br>
+    10. Governing Law<br>
+    <br>
+    These Terms shall be governed by and construed in accordance with the laws of Greece.<br>
+</p>
