Add - Confirm password and terms field in register form, validator file that checks for password equality

--- a/src/app/routes/user/register/register.component.less
+++ b/src/app/routes/user/register/register.component.less
@@ -80,6 +80,7 @@ input, mat-checkbox {
 a {
     color: #00ADB5;
     text-decoration: none;
+    font-size: 1.2vw;
 }
 
 a:hover {
@@ -95,5 +96,9 @@ a:hover {
 
 .terms-msg {
     color: #EEEEEE;
-    font-size: 0.8vw;
+    font-size: 1.2vw;
+}
+
+.mat-suffix {
+    color: #00ADB5;
 }
