--- a/src/app/routes/user/register/register.component.html
+++ b/src/app/routes/user/register/register.component.html
@@ -22,26 +22,28 @@
 
                 <mat-form-field class="form-element" appearance="fill">
                     <mat-label>{{ 'gen_password' | translate }}</mat-label>
-                    <input [type]="hide ? 'password' : 'text'" matInput
+                    <input [type]="hidePassword ? 'password' : 'text'" matInput
                         placeholder="{{'gen_password' | translate}}" formControlName="password">
-                    <mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    <mat-icon matSuffix (click)="hidePassword = !hidePassword" class="mat-suffix">{{ hidePassword ? 'visibility_off' : 'visibility'}}</mat-icon>
                     <mat-error *ngIf="">{{'error_required_error' | translate}}</mat-error>
                 </mat-form-field>
 
-                <!-- <mat-form-field class="form-element" appearance="fill">
-                    <mat-label>Confirm Password</mat-label>
-                    <input [type]="hide ? 'password' : 'text'" matInput
-                        placeholder="{{'gen_password' | translate}}" formControlName="password">
-                    <mat-icon matSuffix (click)="hide = !hide">{{ hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                    <mat-error *ngIf="">{{'error_required_error' | translate}}</mat-error>
-                </mat-form-field> -->
+                <mat-form-field class="form-element" appearance="fill">
+                    <mat-label>{{ 'gen_check_confirm_password' | translate }}</mat-label>
+                    <input [type]="hideConfirmPassword ? 'password' : 'text'" matInput
+                        placeholder="{{'gen_check_confirm_password' | translate}}" formControlName="confirmPassword">
+                    <mat-icon matSuffix (click)="hideConfirmPassword = !hideConfirmPassword" class="mat-suffix">{{ hideConfirmPassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+                    <mat-error *ngIf="registerGroup.controls['confirmPassword'].errors?.['confirmedValidator'] && registerGroup.controls['confirmPassword'].touched">
+                        {{'gen_passwords_do_not_match' | translate}}
+                    </mat-error>
+                </mat-form-field>
 
-                <!-- <section class="form-element">
-                    <mat-checkbox formControlName="privacy">
+                <section class="form-element">
+                    <mat-checkbox formControlName="terms">
                         <span class="terms-msg"> {{ 'terms_msg' | translate }} </span>
                         <a href="/terms">{{ 'terms_title' | translate }}</a>
                     </mat-checkbox>
-                </section> -->
+                </section>
 
                 <button class="button" (click)="register()">
                     <i class="pr-1 fa fa-sign-in-alt"></i>
