Created some less generic classes, starting constructing request service, created confirm dialog and added return user endpoint

--- a/src/styles/theme/colors.less
+++ b/src/styles/theme/colors.less
@@ -1,10 +1,10 @@
 /* === Colors === */
-@themeColor     : #0ba360;
-@themeBg        : #212121;
-@themeColor-Dark: #08824c;
-@themeColor-Text: #fafafa;
+@themeColor     : #00ADB5;
+@themeBg        : #222831;
+@themeColor-Dark: #1f9bcc;
+@themeColor-Text: #EEEEEE;
 @darkText       : #000000;
-@lightText      : #fafafa;
+@lightText      : #EEEEEE;
 
 /* Dark Theme */
 @primaryBg     : #171717;
@@ -15,9 +15,8 @@
 @thirdText     : #fafafa;
 @materialBg    : #424242;
 
-@buttonsBg        : #212121;
-@buttonsText      : #9e9e9e;
-@buttonsTextHover : #fafafa;
+@buttonsBg        : #00ADB5;
+@buttonsText      : #EEEEEE;
 
 .clr-sec-text {
     color: @secondaryText;
