Move app title to the right, disable appointments

--- a/src/app/components/navbar/navbar.component.less
+++ b/src/app/components/navbar/navbar.component.less
@@ -8,7 +8,8 @@
   height: 5vh;
 
   .mat-toolbar-row {
-    justify-content: space-between;
+    // Uncomment this to make the navbar go right
+    // justify-content: space-between;
 
     .sidebar-button {
       background     : none;
