Add - Mat spinner, 404 page, moved token logic to component to return login as a promise to make the spinner work

--- a/src/app/routes/user/login/login.component.less
+++ b/src/app/routes/user/login/login.component.less
@@ -7,7 +7,10 @@ body {
 }
 
 mat-spinner {
+    position: absolute;
+    top: 40%;
     margin: auto;
+    z-index: 1000;
 }
 
 /* Styling for the container */
