--- a/src/app/routes/settings/settings.component.html
+++ b/src/app/routes/settings/settings.component.html
@@ -18,6 +18,7 @@
                     <h5 class="card-title">{{ item.label | translate }}</h5>
                     <p class="card-text">{{ item.description | translate }}</p>
                     <button class="card-button" (click)="openDialog(item.action)">{{ "gen_select" | translate }}</button>
+                </div>
             </div>
         </div>
     </div>
