Add - Change Password Dialog UI

--- a/src/styles/theme/colors.less
+++ b/src/styles/theme/colors.less
@@ -14,7 +14,7 @@
 @thirdBg       : #424242;
 @thirdText     : #fafafa;
 @materialBg    : #424242;
-
+@buttonsTextHover: #fafafa;
 @buttonsBg        : #00ADB5;
 @buttonsText      : #EEEEEE;
 
