--- a/src/styles.less
+++ b/src/styles.less
@@ -3,6 +3,8 @@
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+@import "styles/buttons.less";
+@import "styles/dialogs.less";
 
 html, body { height: 100%; }
 // body { margin: 0; font-family: Montserrat, "Helvetica Neue", sans-serif; }
