--- a/src/styles/buttons.less
+++ b/src/styles/buttons.less
@@ -19,7 +19,7 @@
 
     &:hover {
         background-color: @themeColor;
-        color           : @buttonsTextHover;
+        color           : #EEEEEE;
         border          : 1px solid @themeColor;
     }
 
@@ -32,7 +32,26 @@
         text-decoration: none !important;
 
         &:hover {
-            color: @buttonsTextHover;
+            color: #EEEEEE;
         }
     }
 }
+
+.confirm {
+    background-color: #00ADB5;
+    color           : #EEEEEE;
+  }
+  
+.cancel {
+  background-color: #B4B4B8;
+  color           : #EEEEEE;
+}
+
+.btn {
+    padding      : 10px 20px;
+    border       : none;
+    border-radius: 5px;
+    cursor       : pointer;
+    transition   : background-color 0.2s;
+    outline      : none;
+  }
